backport latest atom changes from sitecore-frontend

--- a/assets/styles/atoms/meta/_meta.scss
+++ b/assets/styles/atoms/meta/_meta.scss
@@ -48,6 +48,22 @@
     }
 }
 
+.meta--grey {
+    &,
+    & > a {
+        color: tint(palette(grey), "darken", 5);
+    }
+
+    > a {
+        @include link() {
+            color: tint(palette(grey), "darken", 5);
+        }
+        @include link-hover() {
+            color: tint(palette(grey), "darken", 6);
+        }
+    }
+}
+
 
 .meta--tight {
     letter-spacing: rem-calc(1);
