chevron black modifier added

--- a/assets/styles/atoms/chevron/_chevron.scss
+++ b/assets/styles/atoms/chevron/_chevron.scss
@@ -74,6 +74,13 @@
     @include chevron-primary;
 }
 
+// Black forced chevron
+.chevron--black {
+    &:before {
+        border-color: black;
+    }
+}
+
 // White coloured Chevron modifier
 .chevron--white {
     @include chevron-white;
