--- a/assets/styles/atoms/pill/_pill.scss
+++ b/assets/styles/atoms/pill/_pill.scss
@@ -4,7 +4,7 @@
 
 .pill {
     border-radius: rem-calc(5);
-    font-size: ms(-3);
+    font-size: 10px;
     padding: spacing(5 12);
     margin-bottom: spacing(5);
     font-family: "stolzl", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
@@ -45,5 +45,16 @@
 
     @include link-hover {
         background: tint(palette(grey), "darken", 2);
+    }
+}
+
+.pill--black {
+    @include link() {
+        background: black;
+        color: white;
+    }
+
+    @include link-hover {
+        background: tint(black, "lighten", 2);
     }
 }
