meta status modifier added for new 2.16 snippets

--- a/assets/styles/atoms/meta/_meta.scss
+++ b/assets/styles/atoms/meta/_meta.scss
@@ -64,7 +64,38 @@
     }
 }
 
-
 .meta--tight {
     letter-spacing: rem-calc(1);
+}
+
+.meta--status {
+    color: black;
+
+    &:before {
+        content: ' ';
+        width: rem-calc(10);
+        height: rem-calc(10);
+        margin-right: rem-calc(10);
+        background: black;
+        border-radius: 100%;
+        display: inline-block;
+    }
+}
+
+.meta--status--green {
+    &:before {
+        background: #75B44A;
+    }
+}
+
+.meta--status--blue {
+    &:before {
+        background: #174B66;
+    }
+}
+
+.meta--status--red {
+    &:before {
+        background: #F2343F;
+    }
 }
