status indicator atom added

--- a/assets/styles/atoms.scss
+++ b/assets/styles/atoms.scss
@@ -27,3 +27,4 @@
 @import "atoms/shadow/shadow";
 @import "atoms/close/close";
 @import "atoms/forms/forms";
+@import "atoms/status-indicator/status-indicator";
