--- a/assets/styles/atoms/btn/_btn.scss
+++ b/assets/styles/atoms/btn/_btn.scss
@@ -11,6 +11,7 @@
     font-weight: 500;
     font-size: ms(0);
     transition: all ease 150ms;
+    line-height: 1;
     // @TODO - move font-family to global vars?
     font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
@@ -30,6 +31,11 @@
 // Base btn styling
 .btn {
     @include btn();
+}
+
+button {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 @mixin btn-primary() {
