--- a/assets/styles/atoms/page-title/_page-title.scss
+++ b/assets/styles/atoms/page-title/_page-title.scss
@@ -19,6 +19,7 @@
 
 .page-title--small {
     font-size: ms(6);
+    line-height: 1.1;
 
     @include respond-to(medium) {
         font-size: ms(8);
