Added responsive classes for wrapper and figure modifiers

--- a/assets/styles/atoms/figure/_figure.scss
+++ b/assets/styles/atoms/figure/_figure.scss
@@ -34,3 +34,12 @@ figcaption {
         border-radius: 0px;
     }
 }
+
+.figure--round\@large {
+    @include respond-to(large) {
+        & > img {
+            border-radius: rem-calc(5);
+        }
+    }
+}
+
