Reinstate space below img in figure

--- a/assets/styles/atoms/figure/_figure.scss
+++ b/assets/styles/atoms/figure/_figure.scss
@@ -23,9 +23,9 @@ figcaption {
     margin: spacing(0);
 
     & > img {
-        margin: spacing(0);
-        padding: spacing(0);
-        display: block;
+        // margin: spacing(0);
+        // padding: spacing(0);
+        // display: block;
     }
 }
 
