[Improved] De-couple figure styles from the figure element
…allowing re-use on things that aren't <figure>.

--- a/assets/styles/atoms/figure/_figure.scss
+++ b/assets/styles/atoms/figure/_figure.scss
@@ -2,7 +2,8 @@
 // Figure Atom
 // ==========================================================================
 
-figure {
+figure,
+.figure {
     display: block;
     margin: spacing(25 0);
 
