--- a/assets/styles/atoms/chevron/_chevron.scss
+++ b/assets/styles/atoms/chevron/_chevron.scss
@@ -19,7 +19,7 @@
 
 @mixin chevron-primary {
     &:before {
-        border-color: palette(primary);
+        border-color: palette("primary");
     }
 }
 
