--- a/assets/styles/atoms/btn/_btn.scss
+++ b/assets/styles/atoms/btn/_btn.scss
@@ -17,15 +17,15 @@
 
     @include link() {
         text-decoration: none;
-        border: rem-calc(2) solid palette(black);
+        border: rem-calc(2) solid palette("black");
         background: none;
         background-color: white;
-        color: palette(black);
+        color: palette("black");
     }
 
     @include link-hover() {
-        border: rem-calc(2) solid palette(primary);
-        color: palette(primary);
+        border: rem-calc(2) solid palette("primary");
+        color: palette("primary");
     }
 }
 
@@ -41,14 +41,14 @@ button {
 
 @mixin btn-primary() {
     @include link() {
-        border: rem-calc(2) solid palette(primary);
-        background: palette(primary);
+        border: rem-calc(2) solid palette("primary");
+        background: palette("primary");
         color: white;
     }
 
     @include link-hover() {
-        border: rem-calc(2) solid tint(palette(primary), "darken");
-        background: tint(palette(primary), "darken");
+        border: rem-calc(2) solid tint(palette("primary"), "darken");
+        background: tint(palette("primary"), "darken");
         color: white;
     }
 }
@@ -61,14 +61,14 @@ button {
 
 .btn--white {
     @include link() {
-        border: rem-calc(2) solid palette(white);
-        background: palette(white);
-        color: palette(primary) !important;
+        border: rem-calc(2) solid palette("white");
+        background: palette("white");
+        color: palette("primary") !important;
     }
 
     @include link-hover() {
         background: rgba(255,255,255, 0);
-        color: palette(white) !important;
+        color: palette("white") !important;
     }
 }
 
@@ -80,12 +80,12 @@ button {
         border: none;
         background-image: none;
         background-color: transparent;
-        color: palette(black);
+        color: palette("black");
     }
 
     @include link-hover() {
         border: none;
-        color: palette(primary);
+        color: palette("primary");
     }
 }
 
