--- a/assets/styles/atoms/headings/_headings.scss
+++ b/assets/styles/atoms/headings/_headings.scss
@@ -14,7 +14,7 @@ h5, .h5,
 h6, .h6 {
     margin: 0 0 0.5em 0;
     padding: 0;
-    color: palette(black);
+    color: palette("black");
     font-weight: 700;
     line-height: 1.4;
     font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
