--- a/assets/styles/atoms/page-title/_page-title.scss
+++ b/assets/styles/atoms/page-title/_page-title.scss
@@ -6,7 +6,7 @@
 .page-title {
     margin: 0 0 0.5em 0;
     padding: 0;
-    color: palette(black);
+    color: palette("black");
     font-weight: 500;
     line-height: 1.2;
     font-size: ms(6);
