--- a/assets/styles/tools/_palette.scss
+++ b/assets/styles/tools/_palette.scss
@@ -2,7 +2,7 @@
 // Palette loader tool
 //
 // Used to load colours from the palette design token
-// TLDR; - color: palette(primary);
+// TLDR; - color: palette("primary");
 // *Important* Remember to load this after including (main.scss) - default usage - @include palette-load($colours-map);
 // ==========================================================================
 
